updating project, adjusting application settings, better docker compose and readme